# vvz-ai-editor

./: .cursorrules  .dockerignore  .env.example  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  _patch_open_command.py  mypy.ini  patch_selected_nodes.py  pyproject.toml  pytest.ini  requirements.txt  test_config_pipeline.json
.cursor/agents/: orchestrator.md  orchestrator_tactical.md  orchestrator_tactical_debug.md  tester_ca.md
.cursor/commands/: realusecmd.md
.cursor/rules/: Server-managing.mdc  filestruct.mdc  test-data.mdc  testprj.mdс
ai_editor/: __init__.py  code_issues.yaml  hooks.py  hooks_register_part1.py  hooks_register_part2.py  main.py  main_app_events.py  main_app_factory.py  main_cleanup.py  main_config.py  main_daemon_logging.py  main_queue_init.py  main_server_presentation.py  main_startup_info.py  method_index.yaml
ai_editor/cli/: __init__.py  config_cli.py  config_cli_commands.py  config_cli_generate.py  config_cli_helpers.py  config_cli_parser.py  cst_compose_crn53pzy.py  cst_compose_ohxdqp51.py  cst_compose_zjyy8w9c.py  daemon_cli_commands.py  server_manager_cli.py
ai_editor/commands/: __init__.py  base_mcp_command.py  base_mcp_command_resolve_path.py  command_metadata_helpers.py  compose_cst_db.py  compose_cst_ops_flow.py  compose_cst_writer.py  editor_info_content.py  health_command.py  identifier_types_reference.py  info_command.py  preview_command_metadata.py  preview_command_schema.py  queue_health_command.py  universal_file_preview_command.py  universal_file_preview_runtime.py  universal_file_replace_command.py  zero_arg_commands_metadata.py
ai_editor/config_templates/: __init__.py  ai_editor_container.json
ai_editor/core/: command_execution_job_patch.py  config.py  config_placeholders.py  config_validation.py  constants.py  dependency_compat.py  editor_config_extension.py  editor_workspace_paths.py  exceptions.py  file_disk_registration.py  (+19 more)
aiedmgr_entry/: __init__.py  main.py
client/: README.md  pyproject.toml
client/ai_editor_client/: __init__.py  client.py  commands_proxy.py  config.py  editor_file.py  exceptions.py  file_session.py  local_edit_workspace.py  responses.py  server_api.py  server_schema.py  universal_file.py  validation.py
client/examples/: _client_api_inventory.py  _common.py  ex_config_only.py  ex_file_sessions.py  ex_minimal_validated.py  ex_session_view_subordinates.py  ex_universal_files.py  run_all_examples.py
codex/: README.md  modes.yaml
config/: README.md  ai_editor_container.json
docker/: Dockerfile  README.md  build-deb.sh  build.sh  container.env  dockerhub_repo.sh  run.sh
docs/: CONFIG_LOCAL_VS_CONTAINER.md  PROJECT_RULES.md  README.md  config_example_with_workers.json
etc/: ai-editor  ai_editor_container.json
scripts/: _delete_models_sidecar.py  _find_docstring_validator.py  _patch_hooks_register.py  adapter_transfer_roundtrip_demo.py  advisory_locks_server_pipeline.py  aiedcfg  aiedmgr  analyze_files_in_db.py  apply_add_file_fix.py  apply_plan_create_prompts.py  apply_postgres_files_norm.py  audit_api_param_validation.py  audit_commands.py  audit_metadata_standard.py  backfill_entity_cst_node_id.py  benchmark_chunker.py  bootstrap_existing.py  build_deb.sh  build_open_runtime_for_plan.py  build_write_preview_runtime_for_plan.py  check_deleted_default.py  check_inline_ids.py  check_list_cst_blocks.py  check_pg_schema.py  check_restore.py  check_worker_sql.py  collect_metrics_csv.py  collect_worker_stats.py  command_inventory.py  debug_index.py  debug_stable.py  delete_all_projects_except.py  demo_read_only_batch_preview_chunks.py  embed_as_file_content.py  extract_schema_creation.py  fix_database_paths.py  fix_dead_code_tree_builder.py  fix_files_norm.py  fix_files_norm2.py  fix_find_node_bases.py  (+62 more)
tests/: __init__.py  conftest.py  test_batch_insert_replace_stable_id.py  test_client_server_api_sync.py  test_code_analysis_client.py  test_code_analysis_client_queue_and_errors.py  test_command_execution_job_reconcile.py  test_compose_cst_module_ops.py  test_constants.py  test_cst_decorator_preview_edit.py  test_cst_insert_save_marker_budget.py  test_cst_module_patcher_range_trivia.py  test_cst_query_executor.py  test_cst_query_integration.py  test_cst_query_parser.py  test_cst_query_special_chars.py  test_cst_save_verification.py  test_cst_stable_ids.py  test_cst_tree_saver.py  test_cst_validation.py  test_dependency_compatibility_rejects_old_versions.py  test_diff_support.py  test_docstring_validator.py  test_edit_on_invalid_files.py  test_exceptions.py  test_file_disk_registration.py  test_file_handlers_base.py  test_file_identity.py  test_fresh_db_startup_schema.py  test_info_command.py  test_insert_position.py  test_json_tree_core.py  test_main_cleanup_shutdown.py  test_main_server_presentation.py  test_markdown_handler_annotated_full_text.py  test_markdown_line_ranges.py  test_markdown_node_ref_edit.py  test_mcp_queue_regressions.py  test_mutable_cst_layer.py  test_path_normalization.py  (+52 more)
(+816 files in other folders)
