[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-editor"
version = "1.0.55"
description = "AI Editor MCP server: universal file preview, open, edit, write, and close"
readme = { file = "docs/README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
    { name = "Vasiliy Zdanovskiy", email = "vasilyvz@gmail.com" },
]
dependencies = [
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "click>=8.0",
    "mcp>=1.0.0",
    "pydantic>=2.1.0",
    "lark>=1.1.0",
    "libcst>=1.1.0",
    "mcp-proxy-adapter>=8.10.19",
    "code-analysis-client>=1.0.9",
    "queuemgr>=1.0.20",
    "dulwich>=1.2.4",
    "markdown-it-py>=3.0",
    "black>=24.0",
    "flake8>=7.0",
    "ruff>=0.6.0",
    "mypy>=1.8",
]
# PostgreSQL logical backup (backup_database / restore_database) also needs OS binaries
# pg_dump and pg_restore (e.g. Debian/Ubuntu: apt install postgresql-client). Pip cannot
# install them. Optional extra `postgres-backup` is a marker: `pip install -e ".[postgres-backup]"`.

[project.optional-dependencies]
# Empty extra: documents that operators should install postgresql-client for pg_dump/pg_restore.
postgres-backup = []
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.4",
    "pytest-cov>=7.0",
    "anyio>=4.0",
    "black>=24.0",
    "flake8>=7.0",
    "ruff>=0.6.0",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_editor*", "aiedmgr_entry*"]

[tool.setuptools.package-data]
"ai_editor.config_templates" = ["*.json"]

# Portable shell launcher (#!/usr/bin/env bash); not pip console_scripts with host shebang.
[tool.setuptools]
script-files = ["scripts/aiedmgr", "scripts/aiedcfg"]

[tool.ruff]
line-length = 88
include = [
    "ai_editor/core/code_quality/**/*.py",
    "ai_editor/core/file_validation/**/*.py",
    "ai_editor/core/cst_module/**/*.py",
    "tests/unit/test_quality_tools_mypy_config.py",
    "tests/test_type_checker_mypy_semantics.py",
]
extend-exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "env",
    "ENV",
    "env.bak",
    "venv.bak",
    ".eggs",
    "docs/ai_reports",
    "scripts",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
