[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-editor-client"
dynamic = ["version"]
description = "Async JSON-RPC client for the ai-editor MCP server (mcp-proxy-adapter JsonRpcClient)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Vasiliy Zdanovskiy", email = "vasilyvz@gmail.com" },
]
dependencies = [
    "mcp-proxy-adapter>=8.10.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
]

[tool.setuptools.dynamic]
version = { file = "ai_editor_client/version.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_editor_client*"]

[tool.setuptools.package-data]
ai_editor_client = ["py.typed", "version.txt"]
